<resources>
  <string name="abc_action_bar_home_description">Navigate home</string>
  <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
  <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_menu_overflow_description">More options</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_activity_chooser_view_see_all">See all</string>
  <string name="abc_activitychooserview_choose_application">Choose an app</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_font_family_body_1_material">sans-serif</string>
  <string name="abc_font_family_body_2_material">sans-serif-medium</string>
  <string name="abc_font_family_button_material">sans-serif-medium</string>
  <string name="abc_font_family_caption_material">sans-serif</string>
  <string name="abc_font_family_display_1_material">sans-serif</string>
  <string name="abc_font_family_display_2_material">sans-serif</string>
  <string name="abc_font_family_display_3_material">sans-serif</string>
  <string name="abc_font_family_display_4_material">sans-serif-light</string>
  <string name="abc_font_family_headline_material">sans-serif</string>
  <string name="abc_font_family_menu_material">sans-serif</string>
  <string name="abc_font_family_subhead_material">sans-serif</string>
  <string name="abc_font_family_title_material">sans-serif-medium</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_query">Search query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_shareactionprovider_share_with">Share with</string>
  <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="accessibility_date_picker_month">Month</string>
  <string name="accessibility_date_picker_week">Week</string>
  <string name="accessibility_date_picker_year">Year</string>
  <string name="accessibility_datetime_picker_date">Date</string>
  <string name="accessibility_datetime_picker_time">Time</string>
  <string name="accessibility_time_picker_ampm">AM/PM</string>
  <string name="accessibility_time_picker_hour">Hour</string>
  <string name="accessibility_time_picker_milli">Millisecond</string>
  <string name="accessibility_time_picker_minute">Minute</string>
  <string name="accessibility_time_picker_second">Second</string>
  <string name="action_bar_title_create_forum">创建帖子</string>
  <string name="action_bar_title_forum_detail">帖子详情</string>
  <string name="action_bar_title_message_center">消息</string>
  <string name="action_bar_title_my_forum">我的帖子</string>
  <string name="action_bar_title_my_forum_fav">收藏</string>
  <string name="action_bar_title_my_forum_post">发布</string>
  <string name="action_bar_title_my_forum_reply">回复</string>
  <string name="action_bar_title_my_forum_sel">精华</string>
  <string name="action_earn_more_gua_coin">赚呱币</string>
  <string name="action_post">发布</string>
  <string name="action_settings">Settings</string>
  <string name="action_share">分享</string>
  <string name="action_share_now">发送</string>
  <string name="actionbar_share">Share</string>
  <string name="actionbar_textselection_title">Text selection</string>
  <string name="actionbar_web_search">Web search</string>
  <string name="add">添加</string>
  <string name="add_baby">添加宝贝</string>
  <string name="add_baby_need_login_tips">登录才能添加宝贝哦!</string>
  <string name="add_user_need_login_tips">登录才能添加个人信息哦!</string>
  <string name="all_loop_tips">模式切换</string>
  <string name="already_have_account">已有账号?</string>
  <string name="app_name">叽里呱啦-专注儿童英语启蒙</string>
  <string name="attention_wx">关注微信领取</string>
  <string name="audio_channel_empty">暂无内容</string>
  <string name="audio_channel_text">电台</string>
  <string name="audio_fav_channel_name">红心电台</string>
  <string name="audio_limit_time_control">睡眠定时 (剩余%1$s分钟)</string>
  <string name="audio_limit_time_control_disabled">睡眠定时</string>
  <string name="audio_limit_time_control_title">睡眠定时设置</string>
  <string name="audio_offline_channel_name">已下载</string>
  <string name="audio_pop_sharetext">快告诉大家，让更多宝贝听到这首歌！</string>
  <string name="audio_record_play">点击播放</string>
  <string name="audio_record_playing">播放中</string>
  <string name="audio_recording">录音中</string>
  <string name="audio_rnt_channel_name">最近记录</string>
  <string name="audio_search_hint">歌名、歌手、专辑、条形码</string>
  <string name="audio_video_network_state_change_notify_tips">&quot;当前网络无Wi-Fi，继续使用可能会
产生相关流量费用&quot;</string>
  <string name="autofill_keyboard_accessory_content_description">Suggestions available</string>
  <string name="autofill_popup_content_description">Showing autofill popup</string>
  <string name="baby_birthday_illegal">设置日期非法, 请重新设置</string>
  <string name="baby_info">宝贝信息</string>
  <string name="bind_ok">完成绑定</string>
  <string name="bind_wechat_hint">请绑定微信才能保存珍贵的学习记录哦～</string>
  <string name="block_canary_block_list_title">Blocks in %s</string>
  <string name="block_canary_class_has_blocked">blocked %s ms</string>
  <string name="block_canary_delete">Delete</string>
  <string name="block_canary_delete_all">Delete all</string>
  <string name="block_canary_delete_all_dialog_content">Are you sure to delete all records?</string>
  <string name="block_canary_display_activity_label">Blocks</string>
  <string name="block_canary_no">No</string>
  <string name="block_canary_notification_message">Click for more details</string>
  <string name="block_canary_share_leak">Share info</string>
  <string name="block_canary_share_stack_dump">Share stack dump</string>
  <string name="block_canary_share_with">Share with…</string>
  <string name="block_canary_yes">Yes</string>
  <string name="button_retry">重试</string>
  <string name="camera_open_failed">打开相机失败，请前往设置-&gt;应用程序-&gt;权限设置，打开相机权限</string>
  <string name="can_not_reply_lock_post">不能回复锁定的帖子</string>
  <string name="cancel">取消</string>
  <string name="capture_qr_bar_code">扫描条形码</string>
  <string name="capture_qr_bar_code_tips">将绘本条形码放入框内</string>
  <string name="capture_qr_code">扫描二维码</string>
  <string name="capture_qr_code_tips">如何下载叽里呱啦TV版</string>
  <string name="change_environment">切换环境到_%s_</string>
  <string name="change_picture">更换照片</string>
  <string name="change_pwd">密码</string>
  <string name="check_record_try">请检测设备录音相关设置后重试</string>
  <string name="children_lock_tips">童锁</string>
  <string name="class_age_prefix">年龄：</string>
  <string name="class_member_prefix">人数：</string>
  <string name="class_owner_prefix">班长：</string>
  <string name="click_to_record">点击录音</string>
  <string name="clocking_record_mobile_hint">绑定手机号，领取珍贵的礼物</string>
  <string name="collect_article_txt">快去告诉大家，让更多父母与你一起成长！</string>
  <string name="collect_success">收藏成功</string>
  <string name="collect_video_notify_txt">快告诉大家，让更多宝贝看到这部短片！</string>
  <string name="color_picker_button_black">Black</string>
  <string name="color_picker_button_blue">Blue</string>
  <string name="color_picker_button_cancel">Cancel</string>
  <string name="color_picker_button_cyan">Cyan</string>
  <string name="color_picker_button_green">Green</string>
  <string name="color_picker_button_magenta">Magenta</string>
  <string name="color_picker_button_more">More</string>
  <string name="color_picker_button_red">Red</string>
  <string name="color_picker_button_set">Set</string>
  <string name="color_picker_button_white">White</string>
  <string name="color_picker_button_yellow">Yellow</string>
  <string name="color_picker_dialog_title">Select color</string>
  <string name="color_picker_hue">Hue</string>
  <string name="color_picker_saturation">Saturation</string>
  <string name="color_picker_value">Value</string>
  <string name="com.crashlytics.android.build_id">10a3c578-a2a2-410e-bfde-f61e4dccddca</string>
  <string name="complete">完成</string>
  <string name="complete_course_txt">恭喜你完成了，赶紧分享给朋友吧</string>
  <string name="confirm">确认</string>
  <string name="confirm_modify">确认修改</string>
  <string name="confirm_tips">确定发布</string>
  <string name="connect_to_tv">请选择连接到电视的方式</string>
  <string name="copied_to_clipboard">已复制到粘贴板</string>
  <string name="copy_to_clipboard_failure_message">Failed to copy to the clipboard</string>
  <string name="correct_answer">恭喜宝贝!</string>
  <string name="course_count">／%d课</string>
  <string name="course_count_low">／%d课</string>
  <string name="course_current">第%d课</string>
  <string name="course_discuss_tips">讨论</string>
  <string name="course_download_failed">课程资源下载失败</string>
  <string name="course_exit_content">还没有完成哦！确定要离开吗？</string>
  <string name="course_exit_title">提示</string>
  <string name="course_login_info">登录才能和宝贝使用课程哦！</string>
  <string name="course_report_login_info">登录添加宝贝才能查看课程报告哦！</string>
  <string name="create_account">完成注册</string>
  <string name="create_forum_content_empty">帖子内容不能为空</string>
  <string name="create_forum_title_empty">帖子标题不能为空</string>
  <string name="create_web_tips">手机发帖太麻烦？马上在电脑上访问jiliguala.com/fa</string>
  <string name="crosswalk_install_title">Crosswalk Project Install</string>
  <string name="date_picker_decrement_day_button">Decrement day</string>
  <string name="date_picker_decrement_month_button">Decrement month</string>
  <string name="date_picker_decrement_year_button">Decrement year</string>
  <string name="date_picker_dialog_clear">Clear</string>
  <string name="date_picker_dialog_other_button_label">Other</string>
  <string name="date_picker_dialog_set">Set</string>
  <string name="date_picker_dialog_title">Set date</string>
  <string name="date_picker_increment_day_button">Increment day</string>
  <string name="date_picker_increment_month_button">Increment month</string>
  <string name="date_picker_increment_year_button">Increment year</string>
  <string name="date_time_done">Done</string>
  <string name="date_time_picker_dialog_title">Set date and time</string>
  <string name="day_of_week_label_typeface">sans-serif</string>
  <string name="day_picker_description">Month grid of days</string>
  <string name="decompression_progress_message">Decompressing the Crosswalk Project Service...</string>
  <string name="default_user_nick">呱友</string>
  <string name="define_roundedimageview"/>
  <string name="delete_audio_record_confirm">是否删除当前录音?</string>
  <string name="delete_picture">删除照片</string>
  <string name="discovery_daily">发现</string>
  <string name="forget_password">忘记密码</string>
  <string name="forum_creator_content_hint">内容</string>
  <string name="forum_creator_title_hint">标题</string>
  <string name="forum_sort_all_text">全部</string>
  <string name="forum_sort_new_text">最新</string>
  <string name="forum_sort_sel_text">精华</string>
  <string name="login_id">手机号/邮箱</string>
  <string name="modify_baby_info">修改信息</string>
  <string name="name_your_baby">取英文名</string>
  <string name="password">账号密码</string>
  <string name="phone_info_completion_hint">请输入新手机号码</string>
  <string name="phone_info_subtitle">让宝贝的学习记录不会丢失~</string>
  <string name="set_as_current_baby">设为当前宝宝</string>
  <string name="share_course">分享课程</string>
  <string name="share_course_report">分享课程报告</string>
  <string name="sign_in">登录</string>
  <string name="term_action">用户使用协议</string>
  <string name="term_desc">点击完成代表您同意叽里呱啦</string>
  <string name="verify_code_hint">输入验证码</string>
  <string name="verify_code_new_pwd_confirm">再次确认密码</string>
  <string name="verify_code_not_received">收不到验证码?</string>
  <string name="verify_code_subtitle">已发送验证码到 %1$s</string>
  <string name="verifycode_login">验证码登录</string>
</resources>