<?xml version="1.0" encoding="utf-8"?>
<FrameLayout n1:background="@android:color/white" n1:padding="10.0dip" n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:orientation="vertical" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
        <TextView n1:layout_gravity="center" n1:id="@id/subtitle" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/verify_code_subtitle" />
        <com.wrapp.floatlabelededittext.FloatLabeledEditText n1:layout_width="fill_parent" n1:layout_height="wrap_content" n2:fletPaddingLeft="@dimen/form_input_padding_left" xmlns:n2="http://schemas.android.com/apk/res-auto">
            <EditText n1:textSize="@dimen/content_normal_size" n1:textColor="@color/color_default_dark_gray" n1:textColorHint="@color/color_default_gray" n1:id="@id/verify_code_input" n1:background="@drawable/edittext_bg_style" n1:layout_width="fill_parent" n1:layout_height="@dimen/default_row_height" n1:hint="@string/verify_code_hint" n1:singleLine="true" n1:maxLength="4" n1:drawableLeft="@drawable/icon_code_selector" n1:inputType="number" n1:textCursorDrawable="@null" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText n1:layout_width="fill_parent" n1:layout_height="wrap_content" n3:fletPaddingLeft="@dimen/form_input_padding_left" xmlns:n3="http://schemas.android.com/apk/res-auto">
            <EditText n1:textSize="@dimen/content_normal_size" n1:textColor="@color/color_default_dark_gray" n1:textColorHint="@color/color_default_gray" n1:id="@id/pwd__et" n1:background="@drawable/edittext_bg_style" n1:paddingLeft="0.0dip" n1:layout_width="fill_parent" n1:layout_height="@dimen/default_row_height" n1:hint="@string/password" n1:singleLine="true" n1:maxLength="20" n1:drawableLeft="@drawable/icon_pwd_selector" n1:inputType="textPassword" n1:textCursorDrawable="@null" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText n1:layout_width="fill_parent" n1:layout_height="wrap_content" n4:fletPaddingLeft="@dimen/form_input_padding_left" xmlns:n4="http://schemas.android.com/apk/res-auto">
            <EditText n1:textSize="@dimen/content_normal_size" n1:textColor="@color/color_default_dark_gray" n1:textColorHint="@color/color_default_gray" n1:id="@id/pwd_confirm_et" n1:background="@drawable/edittext_bg_style" n1:paddingLeft="0.0dip" n1:layout_width="fill_parent" n1:layout_height="@dimen/default_row_height" n1:hint="@string/verify_code_new_pwd_confirm" n1:singleLine="true" n1:maxLength="20" n1:drawableLeft="@drawable/icon_pwd_selector" n1:inputType="textPassword" n1:textCursorDrawable="@null" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <TextView n1:enabled="false" n1:textColor="@color/white" n1:gravity="center" n1:layout_gravity="center" n1:id="@id/confirm_btn" n1:background="@drawable/btn_green_selector" n1:layout_width="fill_parent" n1:layout_height="40.0dip" n1:layout_marginTop="20.0dip" n1:text="@string/complete" />
        <TextView n1:textSize="@dimen/content_small_size" n1:textColor="@color/material_blue_grey_800" n1:layout_gravity="center" n1:id="@id/verification_code_received_tv" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="20.0dip" n1:text="@string/verify_code_not_received" />
        <LinearLayout n1:gravity="center" n1:orientation="horizontal" n1:id="@id/term_group" n1:visibility="gone" n1:layout_width="fill_parent" n1:layout_height="40.0dip">
            <TextView n1:textSize="@dimen/content_small_size" n1:textColor="@color/black" n1:gravity="center" n1:layout_gravity="center" n1:layout_width="wrap_content" n1:layout_height="fill_parent" n1:text="@string/term_desc" />
            <TextView n1:textSize="@dimen/content_small_size" n1:textColor="@color/color_default_gray" n1:gravity="center" n1:layout_gravity="center" n1:id="@id/term_btn" n1:layout_width="wrap_content" n1:layout_height="fill_parent" n1:text="@string/term_action" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>