<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout n1:background="@color/default_back_ground_white" n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <ImageView n1:id="@id/action_back" n1:background="@drawable/nav_icon_back" n1:layout_width="@dimen/bar_button_height" n1:layout_height="@dimen/bar_button_width" n1:layout_alignParentLeft="true" n1:layout_centerVertical="true" />
    <LinearLayout n1:orientation="horizontal" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_centerInParent="true">
        <TextView n1:textSize="@dimen/content_large_size" n1:textColor="@color/my_forum_tab_text_color" n1:gravity="center" n1:id="@id/my_post" n1:background="@drawable/forum_tab_bg" n1:paddingLeft="15.0dip" n1:paddingRight="15.0dip" n1:layout_width="wrap_content" n1:layout_height="@dimen/top_bar_height" n1:text="@string/action_bar_title_my_forum_post" n1:layout_centerInParent="true" style="@style/FontMediumStyle" />
        <TextView n1:textSize="@dimen/content_large_size" n1:textColor="@color/my_forum_tab_text_color" n1:gravity="center" n1:id="@id/my_reply" n1:background="@drawable/forum_tab_bg" n1:paddingLeft="15.0dip" n1:paddingRight="15.0dip" n1:layout_width="wrap_content" n1:layout_height="@dimen/top_bar_height" n1:text="@string/action_bar_title_my_forum_reply" n1:layout_centerInParent="true" style="@style/FontMediumStyle" />
        <TextView n1:textSize="@dimen/content_large_size" n1:textColor="@color/my_forum_tab_text_color" n1:gravity="center" n1:id="@id/my_sel" n1:background="@drawable/forum_tab_bg" n1:paddingLeft="15.0dip" n1:paddingRight="15.0dip" n1:layout_width="wrap_content" n1:layout_height="@dimen/top_bar_height" n1:text="@string/action_bar_title_my_forum_sel" n1:layout_centerInParent="true" style="@style/FontMediumStyle" />
        <TextView n1:textSize="@dimen/content_large_size" n1:textColor="@color/my_forum_tab_text_color" n1:gravity="center" n1:id="@id/my_fav" n1:background="@drawable/forum_tab_bg" n1:paddingLeft="10.0dip" n1:paddingRight="10.0dip" n1:layout_width="wrap_content" n1:layout_height="@dimen/top_bar_height" n1:text="@string/action_bar_title_my_forum_fav" n1:layout_centerInParent="true" style="@style/FontMediumStyle" />
    </LinearLayout>
    <TextView n1:textSize="16.0sp" n1:textColor="@color/color_detail_title" n1:id="@id/action_post" n1:padding="3.0dip" n1:visibility="invisible" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/action_post" n1:layout_alignParentRight="true" n1:layout_centerVertical="true" />
    <ImageView n1:background="@color/nav_line_grey" n1:layout_width="fill_parent" n1:layout_height="@dimen/nav_line_height" n1:layout_alignParentBottom="true" />
</RelativeLayout>