<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:gravity="center_horizontal" n1:orientation="vertical" n1:background="@drawable/round_corner_white_bg" n1:layout_width="fill_parent" n1:layout_height="wrap_content"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <TextView n1:textSize="@dimen/content_normal_size_smaller" n1:textColor="@color/color_default_gray" n1:id="@id/baby_name" n1:padding="15.0dip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" />
    <ImageView n1:background="@drawable/line_lightgrey" n1:layout_width="fill_parent" n1:layout_height="wrap_content" />
    <TextView n1:textSize="@dimen/content_normal_size" n1:textColor="@color/color_default_dark_gray" n1:gravity="center" n1:id="@id/name_for_baby" n1:padding="15.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/name_your_baby" />
    <ImageView n1:background="@drawable/line_lightgrey" n1:layout_width="fill_parent" n1:layout_height="wrap_content" />
    <TextView n1:textSize="@dimen/content_normal_size" n1:textColor="@color/color_default_dark_gray" n1:gravity="center" n1:id="@id/modify_baby" n1:padding="15.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/modify_baby_info" />
    <ImageView n1:background="@drawable/line_lightgrey" n1:layout_width="fill_parent" n1:layout_height="wrap_content" />
    <TextView n1:textSize="@dimen/content_normal_size" n1:textColor="@color/color_default_dark_gray" n1:gravity="center" n1:id="@id/set_as_current_baby" n1:padding="15.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/set_as_current_baby" />
    <ImageView n1:id="@id/divider_3" n1:background="@drawable/line_lightgrey" n1:layout_width="fill_parent" n1:layout_height="wrap_content" />
    <TextView n1:textSize="@dimen/content_normal_size" n1:textColor="@color/color_default_dark_gray" n1:gravity="center" n1:id="@id/cancel" n1:padding="15.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/cancel" />
</LinearLayout>