<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:layout_width="fill_parent" n1:layout_height="wrap_content"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:orientation="vertical" n1:background="@drawable/round_corner_gray_bg" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginLeft="10.0dip" n1:layout_marginRight="10.0dip" n1:layout_marginBottom="10.0dip">
        <TextView n1:textSize="@dimen/content_normal_size" n1:textColor="@color/color_green" n1:gravity="center" n1:id="@id/share_course_report" n1:layout_width="fill_parent" n1:layout_height="@dimen/default_row_height" n1:text="@string/share_course_report" />
        <View n1:background="@color/divider_grey_line" n1:layout_width="fill_parent" n1:layout_height="@dimen/divider_line_height" />
        <TextView n1:textSize="@dimen/content_normal_size" n1:textColor="@color/color_green" n1:gravity="center" n1:id="@id/share_course" n1:layout_width="fill_parent" n1:layout_height="@dimen/default_row_height" n1:text="@string/share_course" />
    </LinearLayout>
    <TextView n1:textSize="@dimen/content_normal_size" n1:textColor="@color/color_default_gray" n1:gravity="center" n1:id="@id/share_cancel" n1:background="@drawable/round_corner_menu_option_bg_selector" n1:layout_width="fill_parent" n1:layout_height="@dimen/default_row_height" n1:layout_marginLeft="10.0dip" n1:layout_marginRight="10.0dip" n1:layout_marginBottom="10.0dip" n1:text="@string/cancel" />
</LinearLayout>