<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout n1:background="@android:color/white" n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <ImageView n1:id="@id/action_back" n1:background="@drawable/nav_icon_back" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginLeft="10.0dip" n1:layout_alignParentLeft="true" n1:layout_centerVertical="true" />
    <TextView n1:textColor="@color/color_default_dark_gray" n1:id="@id/title_tv" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/action_bar_title_create_forum" n1:layout_centerInParent="true" style="@style/TopbarTitle" />
    <TextView n1:enabled="false" n1:textColor="@color/default_green_btn_text_color" n1:id="@id/action_perform" n1:paddingLeft="15.0dip" n1:paddingTop="5.0dip" n1:paddingRight="15.0dip" n1:paddingBottom="5.0dip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/action_post" n1:layout_alignParentRight="true" n1:layout_centerVertical="true" style="@style/TopbarSideTitle" />
    <TextView n1:textSize="@dimen/content_normal_size" n1:textColor="@color/white" n1:id="@id/action_tag_perform" n1:background="@drawable/btn_green_selector" n1:paddingLeft="15.0dip" n1:paddingTop="5.0dip" n1:paddingRight="15.0dip" n1:paddingBottom="5.0dip" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginRight="15.0dip" n1:text="@string/action_earn_more_gua_coin" n1:layout_alignParentRight="true" n1:layout_centerVertical="true" />
    <ImageView n1:background="@color/nav_line_grey" n1:layout_width="fill_parent" n1:layout_height="@dimen/nav_line_height" n1:layout_alignParentBottom="true" />
</RelativeLayout>