<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout n1:background="@color/white" n1:clickable="true" n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <RelativeLayout n1:gravity="center_vertical" n1:id="@id/top_bar_container" n1:layout_width="fill_parent" n1:layout_height="@dimen/top_bar_height" n1:layout_alignParentTop="true">
        <ImageView n1:id="@id/back_icon" n1:background="@drawable/nav_icon_back" n1:layout_width="wrap_content" n1:layout_height="wrap_content" />
        <TextView n1:textSize="@dimen/content_large_size" n1:textColor="@color/color_default_green" n1:gravity="center" n1:id="@id/forget_pwd" n1:paddingLeft="10.0dip" n1:paddingRight="15.0dip" n1:layout_width="wrap_content" n1:layout_height="@dimen/default_icon_height" n1:text="@string/forget_password" n1:layout_alignParentRight="true" style="@style/TopbarSideTitle" />
    </RelativeLayout>
    <com.jiliguala.niuwa.common.widget.boldfont.BoldTextView n1:textSize="@dimen/title_x_large" n1:textColor="@color/color_default_dark_gray" n1:gravity="center" n1:id="@id/title" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="15.0dip" n1:layout_marginBottom="10.0dip" n1:text="手机登录" n1:layout_below="@id/top_bar_container" />
    <com.wrapp.floatlabelededittext.FloatLabeledEditText n1:id="@id/mobile_phone_container" n1:visibility="visible" n1:layout_width="fill_parent" n1:layout_height="@dimen/default_row_height" n1:layout_marginLeft="@dimen/onboarding_side_margin" n1:layout_marginTop="@dimen/onboarding_side_margin" n1:layout_marginRight="@dimen/onboarding_side_margin" n1:layout_below="@id/title" n2:fletTextAppearance="@style/GrayText" xmlns:n2="http://schemas.android.com/apk/res-auto">
        <EditText n1:textSize="@dimen/content_large_size" n1:textColor="@color/color_default_dark_gray" n1:textColorHint="@color/color_default_gray" n1:id="@id/mobile_email_login_et" n1:background="@drawable/edittext_bg_style" n1:paddingLeft="0.0dip" n1:layout_width="fill_parent" n1:layout_height="@dimen/default_row_height" n1:hint="@string/login_id" n1:singleLine="true" n1:inputType="textEmailAddress" n1:textCursorDrawable="@null" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <com.wrapp.floatlabelededittext.FloatLabeledEditText n1:id="@id/pwd_login_input_container" n1:layout_width="fill_parent" n1:layout_height="@dimen/default_row_height" n1:layout_marginLeft="@dimen/onboarding_side_margin" n1:layout_marginRight="@dimen/onboarding_side_margin" n1:layout_below="@id/mobile_phone_container" n3:fletTextAppearance="@style/GrayText" xmlns:n3="http://schemas.android.com/apk/res-auto">
        <EditText n1:textSize="@dimen/content_large_size" n1:textColor="@color/color_default_dark_gray" n1:textColorHint="@color/color_default_gray" n1:id="@id/pwd_login_et" n1:background="@drawable/edittext_bg_style" n1:paddingLeft="0.0dip" n1:layout_width="fill_parent" n1:layout_height="@dimen/default_row_height" n1:hint="@string/password" n1:singleLine="true" n1:maxLength="20" n1:inputType="textPassword" n1:textCursorDrawable="@null" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <TextView n1:textColor="@color/color_green" n1:id="@id/verifycode_login" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginLeft="@dimen/onboarding_side_margin" n1:layout_marginTop="@dimen/onboarding_side_margin" n1:layout_marginRight="@dimen/onboarding_side_margin" n1:text="@string/verifycode_login" n1:layout_below="@id/pwd_login_input_container" />
    <com.jiliguala.niuwa.common.widget.boldfont.BoldButton n1:textSize="@dimen/content_x_large_size" n1:textColor="@android:color/white" n1:id="@id/action_next" n1:background="@color/color_green" n1:layout_width="fill_parent" n1:layout_height="@dimen/large_button_height" n1:text="@string/sign_in" n1:layout_alignParentBottom="true" />
</RelativeLayout>